[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Fonts/NotoEmoji-VariableFont_wght.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="Theme" id=8]
/styles/color = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 0
Button/fonts/font = SubResource( 4 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 271.0 ]
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.5
margin_top = -50.0
margin_right = 222.5
margin_bottom = 50.0
theme = SubResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 438.0
margin_bottom = 93.0

[node name="Button" type="CheckBox" parent="PanelContainer/HBoxContainer"]
margin_right = 91.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 9 )
text = "üîÅ"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer"]
margin_left = 95.0
margin_right = 99.0
margin_bottom = 86.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 256.0
margin_bottom = 86.0

[node name="CheckBox" type="CheckBox" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 153.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 6 )
pressed = true
text = "Speed Series"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 153.0
margin_bottom = 45.0

[node name="CheckBox2" type="CheckBox" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 153.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 6 )
text = "Size Series"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/HBoxContainer"]
margin_left = 260.0
margin_right = 264.0
margin_bottom = 86.0

[node name="DirectionOptionButton" type="OptionButton" parent="PanelContainer/HBoxContainer"]
margin_left = 268.0
margin_right = 358.0
margin_bottom = 86.0
rect_min_size = Vector2( 50, 0 )
theme = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "‚û°Ô∏è"
items = [ "‚û°Ô∏è", null, false, 0, null, "‚ÜòÔ∏è", null, false, 1, null, "‚¨áÔ∏è", null, false, 2, null, "‚ÜôÔ∏è", null, false, 3, null, "‚¨ÖÔ∏è", null, false, 4, null, "‚ÜñÔ∏è", null, false, 5, null, "‚¨ÜÔ∏è", null, false, 6, null, "‚ÜóÔ∏è", null, false, 7, null ]
selected = 0

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 366.0
margin_bottom = 86.0

[node name="Start" type="Button" parent="PanelContainer/HBoxContainer"]
margin_left = 370.0
margin_right = 431.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 6 )
text = "Start"
icon_align = 1

[node name="CheckBox" type="CheckBox" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -24.0
margin_right = 12.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Debug"

[connection signal="toggled" from="PanelContainer/HBoxContainer/Button" to="." method="_on_Button_toggled"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/CheckBox2" to="." method="_on_CheckBox2_pressed"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/DirectionOptionButton" to="." method="_on_DirectionOptionButton_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Start" to="." method="_on_Start_pressed"]
